# robotica_movil_personal

./: act_data.csv  odom_tray.csv  real_data.csv  real_tray.csv  ref_data.csv
install/: local_setup.sh  setup.sh
install/cmd_vel_mux/include/cmd_vel_mux/: cmd_vel_mux.hpp
install/cmd_vel_mux/lib/cmd_vel_mux/: cmd_vel_mux_node
install/cmd_vel_mux/share/cmd_vel_mux/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/lab1/lib/lab1/: dead_reckoning_nav.py  obstacle_detector.py  pose_loader.py  run_all.py
install/lab1/libexec/lab1/: data_recorder.py  teleop_nav.py
install/lab1/share/lab1/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/lab1/: CMakeLists.txt
src/lab1/launch/: avanzar_y_rotar.xml  run_all.xml
src/lab1/scripts/: dead_reckoning_nav.py  run_all.py
src/lab2/: CMakeLists.txt
src/lab2/config/: poses.txt
src/lab2/launch/: accion_y_percepcion.xml  avanzar_y_rotar_ctrl.xml  follow_the_carrot.xml  navegacion_pasillo.xml
src/lab2/scripts/: carrot_selector.py  data_recorder.py  data_recorder_od.py  desplazador.py  error_calculator.py  obstacle_detector.py  path_plotter.py  path_reader.py  pid.py  pid_carrot.py  pid_walls.py  pub_velocidad.py  run_all.py  run_all_2.py  run_all_3.py  wall_detector.py
src/log/: latest_build
src/pid_god/: CMakeLists.txt
src/pid_god/launch/: launch.xml
src/pid_god/scripts/: pid  virtual_robot
(+140 files in other folders)
